crates/ty_python_semantic/resources/mdtest/snapshots/1._attribute_assignment…_-_2._Attribute_assignment…_-_3._Instance_attributes_….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. attribute_assignment… - 2. Attribute assignment… - 3. Instance attributes …
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/attribute_assignment.md
---

# Python source files

## mdtest_snippet.py

```
1 | class C:
2 |     attr: int = 0
3 | 
4 | instance = C()
5 | instance.attr = 1  # fine
6 | instance.attr = "wrong"  # error: [invalid-assignment]
7 | 
8 | C.attr = 1  # fine
9 | C.attr = "wrong"  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `Literal["wrong"]` is not assignable to attribute `attr` of type `int`
 --> src/mdtest_snippet.py:6:1
  |
4 | instance = C()
5 | instance.attr = 1  # fine
6 | instance.attr = "wrong"  # error: [invalid-assignment]
  | ^^^^^^^^^^^^^
7 |
8 | C.attr = 1  # fine
  |
info: rule `invalid-assignment` is enabled by default

```

```
error[invalid-assignment]: Object of type `Literal["wrong"]` is not assignable to attribute `attr` of type `int`
 --> src/mdtest_snippet.py:9:1
  |
8 | C.attr = 1  # fine
9 | C.attr = "wrong"  # error: [invalid-assignment]
  | ^^^^^^
  |
info: rule `invalid-assignment` is enabled by default

```
