crates/ty_python_semantic/resources/mdtest/snapshots/1._for.md_-_2._For_loops_-_11._New_over_old_style_i….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. for.md - 2. For loops - 11. New over old style i…
mdtest path: crates/ty_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotIterable:
2 |     def __getitem__(self, key: int) -> int:
3 |         return 42
4 |     __iter__: None = None
5 | 
6 | for x in NotIterable():  # error: [not-iterable]
7 |     pass
```

# Diagnostics

```
error[not-iterable]: Object of type `NotIterable` is not iterable
 --> src/mdtest_snippet.py:6:10
  |
4 |     __iter__: None = None
5 |
6 | for x in NotIterable():  # error: [not-iterable]
  |          ^^^^^^^^^^^^^
7 |     pass
  |
info: Its `__iter__` attribute has type `None`, which is not callable
info: rule `not-iterable` is enabled by default

```
